@@ -163,7 +163,6 @@ int info_handle_file_system_hierarchy_fprint_file_entry(
      info_handle_t *info_handle,
      libfsapfs_file_entry_t *file_entry,
      const system_character_t *path,
-     int level,
      libcerror_error_t **error );
 
 int info_handle_file_system_hierarchy_fprint(
